--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -8,6 +8,7 @@
   series    = {FF communications},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://books.google.fr/books/about/The_types_of_the_folktale.html?id=d9TtAAAAMAAJ&redir_esc=y},
 }
 
 @TechReport{Aaronson2001,
@@ -38,6 +39,7 @@
   year      = {2008},
   author    = {Abbott, H. P.},
   series    = {Cambridge Introductions to Literature},
+  doi       = {10.1017/CBO9780511816932},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -75,6 +77,7 @@
   author    = {Abrams, M. H.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://cengage.com.au/product/title/a-glossary-of-literary-terms/isbn/9781285465067},
 }
 
 @InProceedings{Abu-Jbara2011,
@@ -559,6 +562,7 @@
   pages     = {1},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Quantitative_Formalism.html?id=8qvXZwEACAAJ&redir_esc=y},
 }
 
 @InProceedings{Alm2005,
@@ -592,6 +596,7 @@
   series    = {Chapman \& Hall/CRC Mathematical and Computational Biology},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://www.crcpress.com/An-Introduction-to-Systems-Biology-Design-Principles-of-Biological-Circuits/Alon/p/book/9781584886426},
 }
 
 @Article{Alon2009,
@@ -614,6 +619,7 @@
   author    = {Alter, R.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://www.jstor.org/stable/j.ctt1nq38c},
 }
 
 @Article{Amancio2012,
@@ -3027,6 +3033,7 @@
 
 @Article{Breiman2001,
   author    = {Breiman, L.},
+  title     = {Random Forests},
   journal   = {Machine Learning},
   year      = {2001},
   volume    = {45},
@@ -3760,7 +3767,7 @@
 
 @InCollection{Cauce1994,
   author    = {Cauce, A. M. and Mason, C. and Gonzales, N. and Hiraga, Y. and Liu, G.},
-  title     = {6. Social Support During Adolescence: Methodological and Theoretical Considerations},
+  title     = {Social Support During Adolescence: Methodological and Theoretical Considerations},
   booktitle = {Social Networks and Social Support in Childhood and Adolescence},
   publisher = {De Gruyter},
   year      = {1994},
@@ -4190,7 +4197,7 @@
 @InCollection{Chnes2012,
   author    = {Chênes, C. and Chanel, G. and Soleymani, M. and Pun, T.},
   title     = {Highlight Detection in Movie Scenes Through Inter-users, Physiological Linkage},
-  booktitle = {Computer Communications and Networks},
+  booktitle = {Social Media Retrieval},
   publisher = {Springer},
   year      = {2012},
   series    = {Computer Communications and Networks},
@@ -7800,15 +7807,15 @@
   url       = {https://books.google.fr/books/about/Thomas_Jefferson_and_the_Rhetoric_of_Vir.html?id=0_P7VTCiGv4C&redir_esc=y},
 }
 
-@InCollection{Goldenberg2006,
+@InProceedings{Goldenberg2006,
   author    = {Goldenberg, A. and Zheng, A.},
   title     = {Exploratory Study of a New Model for Evolving Networks},
   booktitle = {ICML Workshop on Statistical Network Analysis},
-  publisher = {Springer},
   year      = {2006},
   volume    = {4503},
   series    = {Lecture Notes in Computer Science},
   pages     = {75-89},
+  publisher = {Springer},
   doi       = {10.1007/978-3-540-73133-7_6},
   owner     = {Vincent},
   timestamp = {2019.04.12},
@@ -11980,9 +11987,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InCollection{Lin2009a,
   author    = {Lin, J. and Wang, W.},
   title     = {Weakly-Supervised Violence Detection in Movies with Audio and Video Based Co-training},
-  booktitle = {Advances in Multimedia Information Processing},
+  booktitle = {Pacific-Rim Conference on Multimedia},
   publisher = {Springer},
   year      = {2009},
+  volume    = {5879},
+  series    = {Lecture Notes in Computer Science},
   pages     = {930-935},
   doi       = {10.1007/978-3-642-10467-1_84},
   owner     = {Vincent},
@@ -14684,15 +14693,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1699684},
 }
 
-@InCollection{Nguyen2013,
+@InProceedings{Nguyen2013,
   author    = {Nguyen, D. and Trieschnigg, D. and Theune, M.},
   title     = {Folktale Classification Using Learning to Rank},
   booktitle = {European Conference on Information Retrieval},
-  publisher = {Springer},
   year      = {2013},
   volume    = {7814},
   series    = {Lecture Notes in Computer Science},
   pages     = {195-206},
+  publisher = {Springer},
   doi       = {10.1007/978-3-642-36973-5_17},
   owner     = {Vincent},
   timestamp = {2019.04.13},
@@ -18312,10 +18321,10 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/The_Sagas_of_Icelanders.html?id=BNeGQgAACAAJ&redir_esc=y},
 }
 
-@InCollection{Smith2001,
+@InProceedings{Smith2001,
   author    = {Smith, D. A. and Crane, G.},
   title     = {Disambiguating Geographic Names in a Historical Digital Library},
-  booktitle = {Research and Advanced Technology for Digital Libraries},
+  booktitle = {International Conference on Theory and Practice of Digital Libraries},
   year      = {2001},
   volume    = {2163},
   series    = {Lecture Notes in Computer Science},
@@ -19743,6 +19752,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Truby, J.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/The_Anatomy_of_Story.html?id=7Wy8G-8h_O0C&redir_esc=y},
 }
 
 @Article{Truong2007,
@@ -19823,9 +19833,10 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Exploratory data analysis},
   publisher = {Addison-Wesley},
   year      = {1977},
-  author    = {Tukey, J.},
+  author    = {Tukey, J. W.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://books.google.fr/books/about/Exploratory_Data_Analysis.html?id=UT9dAAAAIAAJ&redir_esc=y},
 }
 
 @InProceedings{Tunkelang1998,
@@ -19858,6 +19869,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Springer},
   year      = {2013},
   pages     = {341-356},
+  doi       = {10.1007/978-94-007-4276-5_17},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -19952,6 +19964,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {276-283},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=1859726},
 }
 
 @InProceedings{Vala2015,
@@ -20028,6 +20041,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{VanDeBunt1999,
   author    = {Van De Bunt, G. G. and Van Duijn, M. A. J. and Snijders, T. A. B.},
+  title     = {Friendship Networks Through Time: An Actor-Oriented Dynamic Statistical Network Model},
   journal   = {Computational \& Mathematical Organization Theory},
   year      = {1999},
   volume    = {5},
@@ -20169,6 +20183,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {360-363},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.ncbi.nlm.nih.gov/pubmed/15883903},
 }
 
 @InProceedings{Vinciarelli2007,
@@ -20261,15 +20276,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Propp, V. I. A.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Morphology_of_the_Folktale.html?id=3Md3u9UPgOEC&redir_esc=y},
 }
 
 @Book{Vogler2007,
-  title     = {The Writer's Journey},
+  title     = {The writer's journey : mythic structure for writers},
   publisher = {Michael Wiese Productions},
   year      = {2007},
   author    = {Vogler, C.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://cmc.marmot.org/Record/.b2802400x},
 }
 
 @InProceedings{Volkova2010,
@@ -20384,6 +20401,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2014},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {http://persiababylonia.org/archives/methods/social-network-analysis-and-cuneiform-archives/},
 }
 
 @Article{Wainwright2007,
@@ -20547,6 +20565,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ware, C.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.elsevier.com/books/visual-thinking/ware/978-0-12-370896-0},
 }
 
 @Book{Wasserman1994,
@@ -20813,6 +20832,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {West, D. B.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://trove.nla.gov.au/work/21462403},
 }
 
 @InProceedings{West2014,
@@ -20872,6 +20892,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {White, H. C.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://books.google.fr/books/about/Identity_and_Control.html?id=nvfGmD6073cC&redir_esc=y},
 }
 
 @Book{White2008,
@@ -20895,15 +20916,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
-@InCollection{Wieneke2014,
+@InProceedings{Wieneke2014,
   author    = {Wieneke, L. and Düring, M. and Silaume, G. and Lallemand, C. and Croce, V. and Lazzarro, M. and Nucci, F. and Pasini, C. and Fraternali, P. and Tagliasacchi, M. and Melenhorst, M. and Novak, J. and Micheel, I. and Harloff, E. and Garcia Moron, J.},
   title     = {Building the Social Graph of the History of European Integration: A Pipeline for Humanist-Machine Interaction in the Digital Humanities},
   booktitle = {International Conference on Social Informatics},
-  publisher = {Springer},
   year      = {2014},
   volume    = {8359},
   series    = {Lecture Notes in Computer Science},
   pages     = {86-99},
+  publisher = {Springer},
   doi       = {10.1007/978-3-642-55285-4_7},
   owner     = {Vincent},
   timestamp = {2019.04.12},
@@ -20917,6 +20938,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   series    = {Outstanding Dissertations in the Computer Sciences},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://books.google.fr/books/about/Understanding_Goal_Based_Stories.html?id=hmQoAQAAIAAJ&redir_esc=y},
 }
 
 @Article{Willett1988,
@@ -20951,6 +20973,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Williams, R.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://books.google.fr/books/about/The_Country_and_the_City.html?id=3o57NbjApJkC&redir_esc=y},
 }
 
 @Article{Williams1996,
@@ -21010,6 +21033,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Oxford University Press},
   year      = {2000},
   pages     = {86-135},
+  doi       = {10.1093/med:psych/9780195126709.003.0004},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -21055,6 +21079,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Wittgenstein, L.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://www.worldcat.org/title/philosophical-investigations/oclc/371912},
 }
 
 @InCollection{Woelfel1993,
@@ -21066,6 +21091,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {12},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.abc-clio.com/Praeger/product.aspx?pc=D6234C},
 }
 
 @Book{Woloch2003,
@@ -21341,6 +21367,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {1431},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://www.tib.eu/en/search/id/BLCP%3ACN055695260/Changing-Correlations-in-Networks-Assortativity/},
 }
 
 @TechReport{Yanagawa2007,
@@ -21444,6 +21471,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {744-753},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=2391029},
 }
 
 @Article{Yang2013,
@@ -21527,6 +21555,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {351-360},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://faculty.ist.psu.edu/yen/FLtext/},
 }
 
 @InProceedings{Yessenalina2010,
@@ -21820,6 +21849,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   type      = {PhD Thesis},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://digital.lib.washington.edu/researchworks/handle/1773/23330},
 }
 
 @Article{Zhao2003,
