--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -796,6 +796,7 @@
   type        = {Technical Report},
   owner       = {Vincent},
   timestamp   = {2019.04.10},
+  url         = {https://vtechworks.lib.vt.edu/handle/10919/19473},
 }
 
 @InProceedings{Andrews2012,
@@ -1045,6 +1046,7 @@
   pages     = {5-18},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.gestiondesarts.com/en/the-dynamics-of-emotions-in-movie-consumption-a-spectator-centred-approach-pdf#.XLgzoOgzY-U},
 }
 
 @Book{Ausburg2006,
@@ -1054,6 +1056,7 @@
   author    = {Ausburg, T.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://he.kendallhunt.com/product/becoming-interdisciplinary-introduction-interdisciplinary-studies},
 }
 
 @Article{Aviezer2008,
@@ -1076,6 +1079,7 @@
   author    = {Axtell, R. and Epstein, J.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://mitpress.mit.edu/books/growing-artificial-societies},
 }
 
 @InProceedings{Aylett1999,
@@ -1205,6 +1209,7 @@
   pages     = {84-258},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://sta.rl.talis.com/items/6F035326-FBE9-6CE8-1291-5315B169B371.html},
 }
 
 @InCollection{Bakhtin1981a,
@@ -1215,6 +1220,7 @@
   year      = {1981},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://en.wikipedia.org/wiki/Epic_and_Novel},
 }
 
 @Book{Bakhtin1986,
@@ -1234,6 +1240,7 @@
   author    = {Bal, M. and Boheemen, C. V.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://utorontopress.com/ca/narratology-9},
 }
 
 @InProceedings{Balahur2009,
@@ -1265,6 +1272,7 @@
   year      = {2008},
   author    = {Baldick, C.},
   series    = {Oxford Paperbacks},
+  doi       = {10.1093/acref/9780199208272.001.0001},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -1321,6 +1329,7 @@
   year      = {2006},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {http://ufal.mff.cuni.cz/tlt2006/pdf/110.pdf},
 }
 
 @InProceedings{Bamman2007,
@@ -1330,6 +1339,7 @@
   year      = {2007},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://publicatt.unicatt.it/handle/10807/1396},
 }
 
 @InProceedings{Bamman2009,
@@ -1339,6 +1349,7 @@
   year      = {2009},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {http://ufal.mff.cuni.cz/~toman/pedt/publications/Proceedings_TLT8.pdf#page=17},
 }
 
 @InProceedings{Bamman2014,
@@ -1530,6 +1541,7 @@
   year      = {1975},
   volume    = {6},
   pages     = {237-272},
+  doi       = {10.2307/468419},
   owner     = {Vincent},
   timestamp = {2019.04.12},
 }
@@ -1625,6 +1637,7 @@
   pages     = {143-148},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {http://preprinti.imfm.si/PDF/00833.pdf},
 }
 
 @InCollection{Batagelj2004a,
@@ -1769,6 +1782,7 @@
   pages     = {496-505},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Handbook_of_Stress.html?id=jOIJAQAAMAAJ},
 }
 
 @Article{BelloOrgaz2016,
@@ -1793,6 +1807,7 @@
   pages     = {3-16},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://biblio.ugent.be/publication/974367},
 }
 
 @PhdThesis{Bengoetxea2003,
@@ -1803,6 +1818,7 @@
   type      = {PhD Thesis},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {http://www.sc.ehu.es/acwbecae/ikerkuntza/these/thesis.pdf},
 }
 
 @Article{Benini2011,
@@ -1906,6 +1922,7 @@
   author    = {Berge, C.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Théorie_des_graphes_et_ses_applications.html?id=T_YrAAAAIAAJ},
 }
 
 @InProceedings{BergerWolf2006,
@@ -1996,6 +2013,7 @@
   year      = {2004},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {http://www.aaai.org/Papers/Symposia/Spring/2004/SS-04-07/SS04-07-005.pdf},
 }
 
 @Article{Beveridge2016,
@@ -2068,6 +2086,7 @@
   author    = {Biber, D.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://www.cambridge.org/fr/academic/subjects/languages-linguistics/sociolinguistics/variation-across-speech-and-writing?format=PB&isbn=9780521425568},
 }
 
 @Article{Biber1989,
@@ -2103,6 +2122,7 @@
   author    = {Biber, D.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://books.google.fr/books/about/Dimensions_of_Register_Variation.html?id=c2eN9Z5uNdQC},
 }
 
 @Book{Biber1998,
@@ -2112,6 +2132,7 @@
   author    = {Biber, D. and Conrad, S. and Reppen, R.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://www.cambridge.org/core/books/corpus-linguistics/752FDD567F6BFD38E3287CBEDEDDA4FC},
 }
 
 @Book{Biber2007,
@@ -2121,6 +2142,7 @@
   author    = {Biber, D. and Connor, U. and Upton, T. A.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://benjamins.com/catalog/scl.28},
 }
 
 @Article{Biddle1986,
@@ -2225,6 +2247,7 @@
   author    = {Bird, S. and Loper, E. and Klein, E.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://www.nltk.org/book/},
 }
 
 @InCollection{Birdsell1968,
@@ -2246,6 +2269,7 @@
   author    = {Birkett, T. and Lee, C.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://cora.ucc.ie/handle/10468/3009},
 }
 
 @InCollection{Bisang2014,
@@ -2363,6 +2387,7 @@
   year      = {2010},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=1873792},
 }
 
 @InProceedings{Bohnet2012,
@@ -2460,6 +2485,7 @@
   series    = {Graduate Studies Series in Mathematics},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=1796041},
 }
 
 @InCollection{Bonato2011,
@@ -2657,6 +2683,7 @@
   year      = {2010},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {http://www.clt.gu.se/beyond-synset-swesaurus-%E2%80%93-fuzzy-swedish-wordnet},
 }
 
 @Article{Bornet2017,
@@ -2963,6 +2990,7 @@
   volume    = {2},
   number    = {4},
   pages     = {597-620},
+  doi       = {10.1007/s11168-004-7431-3},
   owner     = {Vincent},
   timestamp = {2019.04.11},
 }
@@ -2987,6 +3015,7 @@
   year      = {2012},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=2390379},
 }
 
 @Book{Brean2012,
@@ -3135,6 +3164,7 @@
   volume    = {62},
   number    = {2},
   pages     = {375},
+  doi       = {10.1037/h0042862},
   owner     = {Vincent},
   timestamp = {2019.04.11},
 }
@@ -3146,6 +3176,7 @@
   author    = {Brown, P.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://www.cambridge.org/fr/academic/subjects/languages-linguistics/sociolinguistics/politeness-some-universals-language-usage?format=PB&isbn=9780521313551},
 }
 
 @Book{Bryant2009,
@@ -3155,6 +3186,7 @@
   author    = {Bryant, J. and Oliver, M. B.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://books.google.fr/books/about/Media_Effects.html?id=KnQXQOP5uoMC&redir_esc=y},
 }
 
 @Book{Buchanan2003,
@@ -3218,6 +3250,7 @@
   author    = {Bugge, A.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://archive.org/details/caithreimcellach00norsuoft/page/n4},
 }
 
 @InProceedings{Buitinck2013,
@@ -3364,6 +3397,7 @@
   author    = {Burrows, J. F.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://books.google.fr/books/about/Computation_into_criticism.html?id=VitaAAAAMAAJ&redir_esc=y},
 }
 
 @Article{Burrows2002,
@@ -3446,6 +3480,7 @@
   author    = {Butler, C. S.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://trove.nla.gov.au/work/20420962},
 }
 
 @InCollection{Butler2000,
@@ -3477,6 +3512,7 @@
   author    = {Byrne, D.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://books.google.fr/books/about/The_attraction_paradigm.html?id=ObpkAAAAIAAJ&redir_esc=y},
 }
 
 @Book{Byrne1973,
@@ -3914,6 +3950,7 @@
   author    = {Chatman, S.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {http://www.cornellpress.cornell.edu/book/?GCOI=80140100694490},
 }
 
 @InProceedings{Chaturvedi2014,
@@ -4426,12 +4463,13 @@
 }
 
 @Book{Clarke2015,
-  title     = {Before and After the Battle of Clontarf: The Vikings in Ireland and Beyond},
+  title     = {The Vikings in Ireland and beyond: Before and After the Battle of Clontarf},
   publisher = {Four Courts Press},
   year      = {2015},
   author    = {Clarke, H. B. and Johnson, R.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.oxbowbooks.com/oxbow/before-and-after-the-battle-of-clontarf-the-vikings-in-ireland-and-beyond.html},
 }
 
 @InProceedings{Clauset2007,
@@ -4535,12 +4573,13 @@
 }
 
 @Book{Coleman1961,
-  title     = {The Adolescent Society},
+  title     = {The adolescent society: The social life of the teenager and its impact on education},
   publisher = {Free Press},
   year      = {1961},
   author    = {Coleman, J. S.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://psycnet.apa.org/record/1961-35078-000},
 }
 
 @InProceedings{Collins2002,
@@ -4587,12 +4626,13 @@
 }
 
 @Book{Comay2001,
-  title     = {Who's Who in the Old Testament Routledge.},
+  title     = {Who's Who in the Old Testament},
   publisher = {Routledge},
   year      = {2001},
   author    = {Comay, J.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://www.routledge.com/Whos-Who-in-the-Old-Testament-2nd-Edition/Comay/p/book/9780415260312},
 }
 
 @InProceedings{Condello2015,
@@ -4649,6 +4689,7 @@
   author    = {Conrad, S. and Biber, D.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://www.crcpress.com/Variation-in-English-Multi-Dimensional-Studies/Biber-Conrad/p/book/9780582307414},
 }
 
 @InProceedings{Consolvo2005,
@@ -4680,6 +4721,7 @@
   author    = {Cornwell, B.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://www.penguin.co.uk/books/207/20773/the-winter-king/9781405928328.html},
 }
 
 @Article{Corten2012,
@@ -5084,6 +5126,7 @@
   author    = {Daniels, L.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://books.google.fr/books/about/Marvel.html?id=uuAOAAAAIAAJ&redir_esc=y},
 }
 
 @InProceedings{Danisman2008,
@@ -5138,6 +5181,7 @@
   publisher = {John Wiley \& Sons},
   year      = {2011},
   author    = {Daskin, M. S.},
+  doi       = {10.1002/9781118032343},
   owner     = {Vincent},
   timestamp = {2019.04.11},
 }
@@ -5741,12 +5785,13 @@
 }
 
 @Book{Downham2007,
-  title     = {Viking Kings of Britain and Ireland: The Dynasty of Ívarr to A.D. 1014.},
+  title     = {Viking Kings of Britain and Ireland: The Dynasty of Ívarr to A.D. 1014},
   publisher = {Dunedin Academic Press},
   year      = {2007},
   author    = {Downham, C.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Viking_Kings_of_Britain_and_Ireland.html?id=j-sWAQAAIAAJ&redir_esc=y},
 }
 
 @Article{Downham2012,
@@ -5845,6 +5890,7 @@
   author    = {Duffy, S.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.vanhamel.nl/codecs/Duffy_(Se%C3%A1n)_2017_ve},
 }
 
 @Book{Duffy2014a,
@@ -5854,6 +5900,7 @@
   author    = {Duffy, S.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Brian_Boru_and_the_Battle_of_Clontarf.html?id=7vH4AwAAQBAJ&redir_esc=y},
 }
 
 @Article{Dugue2015a,
@@ -10868,6 +10915,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1150402.1150476},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Kumar2018,
+  author    = {Kumar, A. and Kaur, A. and Kumar, M.},
+  title     = {Face detection techniques: a review},
+  journal   = {Artificial Intelligence Review},
+  year      = {2018},
+  volume    = {in press},
+  doi       = {10.1007/s10462-018-9650-2},
+  owner     = {Vincent},
+  timestamp = {2019.04.18},
 }
 
 @InProceedings{Kumaran2016,
@@ -19009,6 +19067,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.jmlr.org/papers/v8/sugiyama07b.html},
 }
 
+@Article{Sukthanker2018,
+  author    = {Sukthanker, Rhea and Poria, Soujanya and Cambria, Erik and Thirunavukarasu, Ramkumar},
+  title     = {Anaphora and Coreference Resolution: A Review},
+  journal   = {arXiv},
+  year      = {2018},
+  volume    = {cs.CL},
+  pages     = {1805.11824},
+  owner     = {Vincent},
+  timestamp = {2019.04.18},
+  url       = {https://arxiv.org/abs/1805.11824},
+}
+
 @InProceedings{Sun2011g,
   author    = {Sun, W. and Kise, K.},
   title     = {Similar Manga Retrieval Using Visual Vocabulary Based on Regions of Interest},
@@ -21036,6 +21106,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/med:psych/9780195126709.003.0004},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Wills2019,
+  author    = {Wills, P. and Meyer, F. G.},
+  title     = {Metrics for Graph Comparison: A Practitioner's Guide},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {stat.AP},
+  pages     = {1904.07414},
+  owner     = {Vincent},
+  timestamp = {2019.04.18},
+  url       = {https://arxiv.org/abs/1904.07414},
 }
 
 @Article{Wilson1927,
