--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6056,6 +6056,7 @@
   author    = {Eagleton, T.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.wiley.com/en-us/Literary+Theory%3A+An+Introduction%2C+2nd+Revised+Edition%2C+Anniversary+Edition-p-9781118306291},
 }
 
 @Book{Eagleton2005,
@@ -6065,6 +6066,7 @@
   author    = {Eagleton, T.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.wiley.com/en-us/The+English+Novel%3A+An+Introduction-p-9781118724927},
 }
 
 @Article{Earl2004,
@@ -6135,6 +6137,7 @@
   author    = {Edelsbrunner, H. and Harer, J.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://books.google.fr/books/about/Computational_Topology.html?id=MDXa6gFRZuIC},
 }
 
 @Book{Eder2010,
@@ -6758,6 +6761,7 @@
   author    = {Ferguson, F.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Aristotle_s_Poetics.html?id=MNZIkw4E4NIC&redir_esc=y},
 }
 
 @Article{Ferrara1974,
@@ -6818,6 +6822,7 @@
   author    = {Field, S.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://epdf.tips/screenplay-the-foundations-of-screenwriting-revised-amp-updated.html},
 }
 
 @Book{Fielding1996,
@@ -6959,6 +6964,7 @@
   author    = {Flower, R.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/The_Irish_tradition.html?id=y4ZiAAAAMAAJ&redir_esc=y},
 }
 
 @Article{FontouraCosta2004a,
@@ -7081,6 +7087,7 @@
   author    = {Fowler, A.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Kinds_of_Literature.html?id=63sLAQAAMAAJ&redir_esc=y},
 }
 
 @Electronic{Francis1964,
@@ -7113,6 +7120,7 @@
   author    = {Franzosi, R.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://books.google.fr/books/about/From_Words_to_Numbers.html?id=d_8c1jzJlnIC&redir_esc=y},
 }
 
 @Book{Freehof1972,
@@ -7195,6 +7203,7 @@
   author    = {Freytag, G.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://archive.org/details/freytagstechniqu00freyuoft},
 }
 
 @InProceedings{Friedland2009,
@@ -7386,6 +7395,7 @@
   author    = {Gallafent, E.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://books.google.fr/books/about/Quentin_Tarantino.html?id=6vewE_5azzoC&redir_esc=y},
 }
 
 @Book{Gallaway1950,
@@ -7395,6 +7405,7 @@
   author    = {Gallaway, M.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Constructing_a_Play.html?id=r11ZAAAAMAAJ&redir_esc=y},
 }
 
 @Article{Gallese1998,
@@ -7698,6 +7709,7 @@
   author    = {Girard, R.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/Deceit_desire_and_the_novel.html?id=ONlZAAAAMAAJ&redir_esc=y},
 }
 
 @InProceedings{Girshick2014,
@@ -7767,6 +7779,7 @@
   author    = {Gleed, P.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Bloom_s_How_to_Write_about_William_Shake.html?id=TiP8uv7T2msC&redir_esc=y},
 }
 
 @Article{Gleiser2003,
@@ -7803,6 +7816,7 @@
   author    = {Goedheer, A. J.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Irish_and_Norse_Traditions_about_the_Bat.html?id=paNJAAAAMAAJ&redir_esc=y},
 }
 
 @InProceedings{Goh2012,
@@ -7948,6 +7962,7 @@
   author    = {Gottschall, J.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {http://jonathangottschall.com/storytelling-animal},
 }
 
 @InProceedings{Goyal2010,
@@ -8111,6 +8126,7 @@
   author    = {Greenblatt, S.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://press.princeton.edu/titles/10108.html},
 }
 
 @Article{Greene2000,
@@ -8215,6 +8231,7 @@
   author    = {Grossman, J.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://books.google.fr/books/about/Charles_Dickens_s_Networks_Public_Transp.html?id=iRMkQcx1JFsC&redir_esc=y},
 }
 
 @Article{Grossman2015,
@@ -8497,6 +8514,7 @@
   publisher = {Elsevier},
   year      = {2011},
   author    = {Han, J. and Kamber, M. and Pei, J.},
+  doi       = {10.1016/C2009-0-61819-5},
   owner     = {Vincent},
   timestamp = {2019.04.11},
 }
@@ -8579,6 +8597,7 @@
   author    = {Hare, A. P. and Hare, J. R.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://uk.sagepub.com/en-gb/eur/j-l-moreno/book203713},
 }
 
 @InProceedings{Harel2001,
@@ -8601,6 +8620,7 @@
   author    = {Harris, J. G.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://global.oup.com/academic/product/shakespeare-and-literary-theory-9780199573387},
 }
 
 @InProceedings{Hasan2013,
@@ -8673,6 +8693,7 @@
   author    = {Hauge, M.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://books.google.fr/books/about/Writing_Screenplays_That_Sell.html?id=1ph2niL_pAgC},
 }
 
 @TechReport{Haussler1999,
@@ -8693,6 +8714,7 @@
   author    = {Hawes, D.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://books.google.fr/books/about/Who_s_who_in_Dickens.html?id=Af6ChENaR9cC},
 }
 
 @Article{Hawes2009,
@@ -8715,6 +8737,7 @@
   author    = {Hazen, W.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Renaissance.html?id=T9L8SEsrM70C},
 }
 
 @InProceedings{He2003,
@@ -8757,6 +8780,7 @@
   author    = {Heaney, S.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://books.wwnorton.com/books/detail.aspx?ID=6830},
 }
 
 @InProceedings{Hearst1995,
@@ -8840,6 +8864,7 @@
   author    = {Hennig, M. and Brandes, U. and Pfeffer, J. and Mergel, I.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.press.uchicago.edu/ucp/books/book/distributed/S/bo15475096.html},
 }
 
 @Article{Henriques2013,
@@ -9578,11 +9603,12 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Book{Jackson2007,
   title     = {Natural language processing for online applications: Text retrieval, extraction and categorization},
-  publisher = {John Benjamins.},
+  publisher = {John Benjamins},
   year      = {2007},
   author    = {Jackson, P. and Moulinier, I.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://benjamins.com/catalog/nlp.5},
 }
 
 @Book{Jackson2008,
@@ -9593,6 +9619,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {3},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://press.princeton.edu/titles/8767.html},
 }
 
 @Article{Jacomy2014,
@@ -9728,6 +9755,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Jewkes, W. T.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Act_division_in_Elizabethan_and_Jacobean.html?id=oi1aAAAAMAAJ&redir_esc=y},
 }
 
 @InProceedings{Jhala2008,
@@ -9867,6 +9895,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Jones, E.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Scenic_form_in_Shakespeare.html?id=_KZlAAAAMAAJ&redir_esc=y},
 }
 
 @Article{Jovanovic2014,
@@ -10415,12 +10444,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Kinsella1969,
-  title     = {The Táin},
+  title     = {The Táin: From the Irish epic Táin Bó Cuailnge},
   publisher = {Oxford University Press},
   year      = {1969},
   author    = {Kinsella, T.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://global.oup.com/academic/product/the-tin-9780192803733},
 }
 
 @InCollection{Kipnis2002,
@@ -10556,6 +10586,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Knoke, D. and Kuklinski, J. H.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://us.sagepub.com/en-us/nam/social-network-analysis/book228826},
 }
 
 @Book{Knoke1990,
@@ -10565,6 +10596,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Knoke, D.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://www.cambridge.org/core/books/political-networks/56C92B4EA992885588CDB331E92FEC92},
 }
 
 @Book{Knuth1993,
@@ -10585,6 +10617,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Koch, S.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.penguinrandomhouse.com/books/94583/the-modern-library-writers-workshop-by-stephen-koch/9780375755583/},
 }
 
 @Article{Koehly1998,
